--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <button id="search-button" class="search-button">Search</button>
         </div>
         <div class="button-container">
-            <button id="sort-az" class="rectangular-button">Sort A-Z</button>
-            <button id="sort-za" class="rectangular-button">Sort Z-A</button>
+            <button id="sort-az" class="rectangular-button">Sort A→Z</button>
+            <button id="sort-za" class="rectangular-button">Sort Z→A</button>
             <button id="sort-marks" class="rectangular-button">Sort by Marks</button>
             <button id="sort-passing" class="rectangular-button">Sort by Passing</button>
             <button id="sort-class" class="rectangular-button">Sort by Class</button>
